exports[`Bemlinter of alright.scss should lint without error 1`] = `
Object {
  "alright": Object {
    "info": Array [
      Object {
        "filePath": "./__tests__/single-file/alright.scss",
        "line": null,
        "message": "Parsed",
      },
    ],
  },
}
`;

exports[`Bemlinter of leak.scss should lint with a leak error 1`] = `
Object {
  "leak": Object {
    "error": Array [
      Object {
        "filePath": "./__tests__/single-file/leak.scss",
        "line": 10,
        "message": "\".external-component\" is incoherent with the file name.",
      },
    ],
    "info": Array [
      Object {
        "filePath": "./__tests__/single-file/leak.scss",
        "line": null,
        "message": "Parsed",
      },
    ],
  },
}
`;

exports[`Bemlinter of prefix.scss should lint with a missing prefix error 1`] = `
Object {
  "prefix": Object {
    "error": Array [
      Object {
        "filePath": "./__tests__/single-file/prefix.scss",
        "line": 21,
        "message": "\".prefix--big\" should have a component prefix.",
      },
    ],
    "info": Array [
      Object {
        "filePath": "./__tests__/single-file/prefix.scss",
        "line": null,
        "message": "Parsed",
      },
    ],
  },
}
`;

exports[`Bemlinter of prefix.scss should lint without error 1`] = `
Object {
  "prefix": Object {
    "info": Array [
      Object {
        "filePath": "./__tests__/single-file/prefix.scss",
        "line": null,
        "message": "Parsed",
      },
    ],
  },
}
`;

exports[`Bemlinter of syntax.scss should lint with 6 different syntax error 1`] = `
Object {
  "syntax": Object {
    "error": Array [
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 21,
        "message": "\".syntax---big\" modifier should have only 2 dashes.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 26,
        "message": "\".syntax--big--light\" should have a single modifier.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 32,
        "message": "\".syntax__Close\" should be in lower case.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 40,
        "message": "\".syntax--big__close\" represents an element of a modifier, it should be cut in 2 classes.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 49,
        "message": "\".syntax__header__logo\" should have a single depth of element.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 53,
        "message": "\".syntax___footer\" element should have only 2 underscores.",
      },
    ],
    "info": Array [
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": null,
        "message": "Parsed",
      },
    ],
  },
}
`;

exports[`Bemlinter of syntax.scss should lint without a lower case error 1`] = `
Object {
  "syntax": Object {
    "error": Array [
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 21,
        "message": "\".syntax---big\" modifier should have only 2 dashes.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 26,
        "message": "\".syntax--big--light\" should have a single modifier.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 40,
        "message": "\".syntax--big__close\" represents an element of a modifier, it should be cut in 2 classes.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 49,
        "message": "\".syntax__header__logo\" should have a single depth of element.",
      },
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": 53,
        "message": "\".syntax___footer\" element should have only 2 underscores.",
      },
    ],
    "info": Array [
      Object {
        "filePath": "./__tests__/single-file/syntax.scss",
        "line": null,
        "message": "Parsed",
      },
    ],
  },
}
`;
